fixed the uneven alignement of steps

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -42,8 +42,7 @@
   padding:1.4rem 0.8rem;
 }
 
-.how-it-works header{
-    margin-bottom: -1rem;}
+
 
 .work-steps-container{
     display: flex;
@@ -54,12 +53,13 @@
     width: 85rem;}
 
 .steps{
+    align-items: stretch;
     box-sizing: border-box;
     width: 100%;
     max-width: 26rem;
     height: auto;          
     min-height: 16rem;
-    padding: 2.2rem 1rem;}
+    padding: 1.5rem 1.5rem;}
 
 .footer{
     display:grid;
